2007-09-10  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix when deleting a local folder
	* Cyclic reference adding, fixed in TnyCamelFolder and
	TnyCamelStoreAccount
	* Added add_msg_async for TnyMergeFolder

2007-09-07  Philip Van Hoof  <pvanhoof@gnome.org>

	* Error reporting and retrying when there are problems while getting
	messages. Including insufficient disk space while writing the caches.

2007-09-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix for POP folders (content building not needed and causes some
	crashers)
	* Error handling and reporting when the filesystem is full
	* Counting unread items was wrong, fixed
	* Introduction of tny_camel_folder_get_full_name
	* Removal of tny_camel_folder_get_folder

	* This was a minor API change

2007-09-06  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-store-account.c: fixed a problem in the
	notification of a folder removal that could cause a SIGSEV when
	deleting a tree of folders with messages.

2007-09-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed folder renames for local folders
	* Fixed a bug about keeping folders open

2007-09-04  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-account.h: Change the 
	TnyCamelGetSupportedSecureAuthCallback callback to provide a
	GError* instead of a GError**, because it is not an output parameter.
	* libtinymail-camel/tny-camel-account.c: (on_supauth_idle_func),
	(tny_camel_account_get_supported_secure_authentication_async_thread
	), (tny_camel_account_get_supported_secure_authentication):
	Adapt to the change, propagating GErrors up to the callback.

2007-09-04  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed a problem when folder creation failed: observers where
	nevertheless notified about a folder creation in this case

2007-09-04  Mark Doffman  <mark.doffman@codethink.co.uk>

	* bindigs/python/*: restructuring the Python language bindings

2007-09-04  Murray Cumming  <murrayc@murrayc.com>
