@@ -4,6 +4,7 @@
 	* Cyclic reference adding, fixed in TnyCamelFolder and
 	TnyCamelStoreAccount
 	* Added add_msg_async for TnyMergeFolder
+	* Coping with Maildir folders that miss subfolders
 
 2007-09-07  Philip Van Hoof  <pvanhoof@gnome.org>
 
